docs: documentation for create opportunity
